refactor: rename Entity and Sonar recommendations